# legend-clover

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/legend-clover/: Cargo.toml
crates/legend-clover/src/: main.rs
crates/legend-engine/: Cargo.toml
crates/legend-engine/src/: lib.rs
crates/legend-engine/src/bindings/: color.rs
crates/legend-engine/src/engine/: graphics.rs
scripts/: game_data.luck  main.luck
scripts/game_states/: result.luck  title.luck
