[package]
name = "legend-clover"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.26.1", features = [] }
clap = { version = "3.2.12", features = ["derive"] }
legend-engine = { path = "../legend-engine", version = "0.0.1" }
pixels = "0.9.0"
# TODO : change to use published version after it stable
clover = { path = "../../../clover/crates/clover", version = "0.1.3" }
clover-std = { path = "../../../clover/crates/clover-std", version = "0.1.3" }

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]