[package]
name = "legend-engine"
version = "0.0.1"
edition = "2021"

[dependencies]
# TODO : change to use published version after it stable
clover = { path = "../../../clover/crates/clover", version = "0.1.3" }
clover-std = { path = "../../../clover/crates/clover-std", version = "0.1.3" }

byteorder = "1.4.3"
image = "0.24.2"
